# JamJobBotBackend

./: .dockerignore  .editorconfig  .env.dist  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  my_account.session  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: app.py  config.py  register.py
app/controllers/: auth.py
app/models/: HR.py  __init__.py
app/services/: auth.py
jamjobbotbackend/: register.py
jamjobbotbackend/controllers/: __init__.py  auth.py
jamjobbotbackend/filters/: __init__.py  hr.py  hr_filter.py  new_chat.py
jamjobbotbackend/handlers/: __init__.py  add_hr.py  adding_hr.py
jamjobbotbackend/misc/: __init__.py  config.py  connect_db.py  http_messages.py  register.py
jamjobbotbackend/models/: BaseModel.py  HR.py  Meeting.py  __init__.py
jamjobbotbackend/services/: __init__.py  auth.py  extract.py  hr.py
jamjobbotbackend/types/: date.py  meeting.py
jamjobbotbackend/utils/: __init__.py  extract_datetime.py  extract_interview_link.py  get_env.py  is_message_from_hr.py  is_text_from_hr.py  is_user_auth.py  scripts.py
systemd/: app.service  tgbot.service
tests/unit/: extract.py  test_get_value_by_key_regexp_matching.py
