[tool.poetry]
name = "JamJobBotBackend"
version = "0.1.0"
description = "Backend for @JamJobBot in Telegram"
authors = ["Danil Sokolov <danilzyx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
Telethon = "^1.24.0"
Flask = {extras = ["async"], version = "^2.1.2"}
peewee = "^3.14.10"
psycopg2-binary = "^2.9.3"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
