[tool.poetry]
name = "JamJobBotBackend"
version = "0.1.0"
description = "Backend for @JamJobBot in Telegram"
authors = ["Danil Sokolov <danilzyx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
peewee = "^3.14.10"
psycopg2-binary = "^2.9.3"
environs = "^9.5.0"
quart = "^0.17.0"
hypercorn = "^0.13.2"
Pyrogram = "^2.0.17"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
dev = 'jamjobbotbackend.utils.scripts:dev'
build = 'jamjobbotbackend.utils.scripts:build'
migrate = 'jamjobbotbackend.utils.scripts:migrate'
